Kaggle Notebook | notebook39ba071f12 | Version 2

--- a/Nifty50stockmarket predictor.ipynb
+++ b/Nifty50stockmarket predictor.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b4e8c0f9",
+   "id": "4488b21e",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-05-22T18:45:00.998101Z",
-     "iopub.status.busy": "2025-05-22T18:45:00.997650Z",
-     "iopub.status.idle": "2025-05-22T18:45:03.476865Z",
-     "shell.execute_reply": "2025-05-22T18:45:03.475541Z"
+     "iopub.execute_input": "2025-05-22T18:45:17.437525Z",
+     "iopub.status.busy": "2025-05-22T18:45:17.436491Z",
+     "iopub.status.idle": "2025-05-22T18:45:19.481600Z",
+     "shell.execute_reply": "2025-05-22T18:45:19.480717Z"
     },
     "papermill": {
-     "duration": 2.48656,
-     "end_time": "2025-05-22T18:45:03.480784",
+     "duration": 2.0502,
+     "end_time": "2025-05-22T18:45:19.483502",
      "exception": false,
-     "start_time": "2025-05-22T18:45:00.994224",
+     "start_time": "2025-05-22T18:45:17.433302",
      "status": "completed"
     },
     "tags": []
@@ -27,6 +27,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results__.html\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__notebook__.ipynb\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__output__.json\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/custom.css\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___87_0.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___64_1.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___24_0.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___95_0.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___27_0.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___90_1.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___75_1.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___17_0.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___58_1.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___90_0.png\n",
+      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___87_1.png\n",
       "/kaggle/input/nifty50-stock-market-data/HDFCBANK.csv\n",
       "/kaggle/input/nifty50-stock-market-data/GRASIM.csv\n",
       "/kaggle/input/nifty50-stock-market-data/WIPRO.csv\n",
@@ -78,22 +93,7 @@
       "/kaggle/input/nifty50-stock-market-data/INDUSINDBK.csv\n",
       "/kaggle/input/nifty50-stock-market-data/BHARTIARTL.csv\n",
       "/kaggle/input/nifty50-stock-market-data/TECHM.csv\n",
-      "/kaggle/input/nifty50-stock-market-data/POWERGRID.csv\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results__.html\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__notebook__.ipynb\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__output__.json\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/custom.css\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___87_0.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___64_1.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___24_0.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___95_0.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___27_0.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___90_1.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___75_1.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___17_0.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___58_1.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___90_0.png\n",
-      "/kaggle/input/reliance-nifty50-time-series-analysis/__results___files/__results___87_1.png\n"
+      "/kaggle/input/nifty50-stock-market-data/POWERGRID.csv\n"
      ]
     }
    ],
@@ -120,19 +120,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ed413f95",
+   "id": "b82a84e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-22T18:45:03.488189Z",
-     "iopub.status.busy": "2025-05-22T18:45:03.487664Z",
-     "iopub.status.idle": "2025-05-22T18:45:06.359171Z",
-     "shell.execute_reply": "2025-05-22T18:45:06.357948Z"
+     "iopub.execute_input": "2025-05-22T18:45:19.489813Z",
+     "iopub.status.busy": "2025-05-22T18:45:19.489343Z",
+     "iopub.status.idle": "2025-05-22T18:45:22.019043Z",
+     "shell.execute_reply": "2025-05-22T18:45:22.018137Z"
     },
     "papermill": {
-     "duration": 2.87806,
-     "end_time": "2025-05-22T18:45:06.361556",
+     "duration": 2.535197,
+     "end_time": "2025-05-22T18:45:22.021461",
      "exception": false,
-     "start_time": "2025-05-22T18:45:03.483496",
+     "start_time": "2025-05-22T18:45:19.486264",
      "status": "completed"
     },
     "tags": []
@@ -267,14 +267,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.334688,
-   "end_time": "2025-05-22T18:45:06.988458",
+   "duration": 10.304188,
+   "end_time": "2025-05-22T18:45:22.645709",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-05-22T18:44:55.653770",
+   "start_time": "2025-05-22T18:45:12.341521",
    "version": "2.6.0"
   }
  },
